2005-10-17  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* configure.ac: Added -Wall compiler option (show all warnings).
	* src/map_draw_cairo.c: The return of Cairo!  Now drawing from tile data and using bounding box overlap tests.
	* src/map_hittest.c: The return of hittesting!
	* src/db.c: Remove dead code.
	* src/downloadmanager.c: Properly return a value from a GnomeVFS callback.
	* src/import_tiger.c: Switch from GPtrArrays to GArrays for points.
	* src/main.c: Properly include libintl.h
	* src/map.c: Cleanups.  Dead code removal.
	* src/map_draw_gdk.c: Add random road segment color option for debugging.
	* src/map_math.c: Added polygon clipping and line stitching.
	* src/map_tilemanager.c: Do basic line stitching at load time.
	* src/mainwindow.c: Cleanups.  Move some code to util.c
	* src/util.c: Receive some code from mainwindow.c

2005-10-12  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mapinfowindow.c: 
	* src/mapinfowindow.h: Added. 

2005-10-12  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/directionswindow.c: 
	* src/directionswindow.h: Added.

2005-10-12  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/test_poly.c: Add checkbox to hide original line.
	* src/import_tiger.c: Fix cleanup code (remove memory leak?)
	* src/util.c: Add util_g_free_with_param, a generic g_free-like callback that takes an (unused) user-data param.

2005-10-11  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* src/test_poly.c:
	* src/test_poly.h: Added to test polygon point reduction algorithm and others.
	* src/map_draw_gdk.c: Prepare for rectangle clipping.
	* src/map_math.c: Add Douglas-Peucker point simplification algorithm.  Add point distance from line function.  Add in/out/partial rect overlap function.

2005-10-10  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/layers.xml:
	* src/map.c: Adjusting of zoom scales and styles.
	* src/dc.c: Properly insert LOD3 table.
	* src/import_tiger.c: Rivers only exist on LOD0.